--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -72,7 +72,7 @@
   ></app-mobile-shopping-cart-item>
   <!-- card totals -->
   <section id="cardtotals and coupon code" class="space-y-4">
-    <div class="lg:w-[300px] border p-4 space-y-4 shadow-sm rounded-lg">
+    <form class="lg:w-[300px] border p-4 space-y-4 shadow-sm rounded-lg">
       <h3 class="font-medium text-lg">Card Totals</h3>
       <div class="space-y-2">
         <div class="flex justify-between items-center">
@@ -112,10 +112,13 @@
       </div>
 
       <!-- proceed to checkout  -->
-      <button class="p-2 uppercase bg-ciliconorange text-white text-lg w-full">
+      <button
+        (click)="checkout()"
+        class="p-2 uppercase bg-ciliconorange text-white text-lg w-full"
+      >
         Proceed to checkout
       </button>
-    </div>
+    </form>
     <!-- couipon code -->
     <div class="lg:w-[300px] border space-y-4 shadow-sm rounded-lg">
       <p class="font-medium text-lg p-4 border-b">Coupon Code</p>
