working on providing line_items from frontend to backend stripe

--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -113,7 +113,7 @@
 
       <!-- proceed to checkout  -->
       <button
-        (click)="checkout()"
+        routerLink="/checkout"
         class="p-2 uppercase bg-ciliconorange text-white text-lg w-full"
       >
         Proceed to checkout
