--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -113,7 +113,7 @@
 
       <!-- proceed to checkout  -->
       <button
-        routerLink="/checkout"
+        (click)="checkout()"
         class="p-2 uppercase bg-ciliconorange text-white text-lg w-full"
       >
         Proceed to checkout
