loading spinner working

--- a/src/app/checkout/checkout.component.html
+++ b/src/app/checkout/checkout.component.html
@@ -1,5 +1,8 @@
-<!-- <ngx-stripe-elements [stripe]="stripe" [elementsOptions]="elementsOptions">
-  <ngx-stripe-payment />
-</ngx-stripe-elements> -->
+@if (loading) {
+<div class="h-[100vh] flex justify-center items-center">
+  <mat-progress-spinner mode="indeterminate"> </mat-progress-spinner>
+</div>
 
+} @else {
 <div id="checkout"></div>
+}
