--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -14,13 +14,8 @@
       <img class="w-6 hidden md:flex" src="./../../assets/icons/search.svg" />
     </div>
     <div class="flex space-x-4 relative">
-      <div class="relative">
-        <img
-          [routerLink]="['/cart']"
-          routerLinkActive="router-link-active"
-          class="w-6"
-          src="./../../assets/icons/cart.svg"
-        />
+      <div (click)="goToCart()" class="relative">
+        <img class="w-6" src="./../../assets/icons/cart.svg" />
         <div
           *ngIf="numberofCartItems >= 1"
           class="bg-ciliconorange flex justify-center items-center absolute w-6 h-6 -bottom-4 -right-3 px-1.5 py-0.5 rounded-full"
