added checkout route auth - users wont be able to directly access checkout page without being redirected from the cart page

--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -113,6 +113,7 @@
 
       <!-- proceed to checkout  -->
       <button
+        [disabled]="cartItems.length === 0"
         (click)="checkout()"
         class="p-2 uppercase bg-ciliconorange text-white text-lg w-full"
       >
