stripe is working now

--- a/src/app/components/product-container/product-container.component.html
+++ b/src/app/components/product-container/product-container.component.html
@@ -1,5 +1,6 @@
 <div
-   routerLink="/product-detail/{{product._id}}" routerLinkActive="active"
+  routerLink="/product-detail/{{ product._id }}"
+  routerLinkActive="active"
   class="w-[176px] md:w-[200px] p-2 lg:m-1 space-y-3 lg:w-[210px] h-[320px] border flex flex-col items-start justify-center relative"
 >
   <div (mouseenter)="hovering()" (mouseleave)="notHovering()" class="relative">
