--- a/src/app/components/product-container/product-container.component.html
+++ b/src/app/components/product-container/product-container.component.html
@@ -1,6 +1,4 @@
 <div
-  routerLink="/product-detail/{{ product._id }}"
-  routerLinkActive="active"
   class="w-[176px] md:w-[200px] p-2 lg:m-1 space-y-3 lg:w-[210px] h-[320px] border flex flex-col items-start justify-center relative"
 >
   <div (mouseenter)="hovering()" (mouseleave)="notHovering()" class="relative">
@@ -26,6 +24,7 @@
           />
         </div>
         <div
+          (click)="addToCart(product)"
           class="hover:bg-ciliconorange cursor-pointer group/hovericons bg-white rounded-full w-[40px] h-[40px] p-2 flex justify-center items-center"
         >
           <img
@@ -55,7 +54,11 @@
     </div>
     <p class="text-[10px] text-gray-400">(738)</p>
   </div>
-  <p class="text-sm line-clamp-2">
+  <p
+    routerLink="/product-detail/{{ product._id }}"
+    routerLinkActive="active"
+    class="text-sm line-clamp-2 cursor-pointer"
+  >
     {{ product.name }}
   </p>
   <p class="font-semibold text-ciliconPriceBlue">${{ product.price }}</p>
