--- a/src/app/home/computer-accessories/computer-accessories.component.html
+++ b/src/app/home/computer-accessories/computer-accessories.component.html
@@ -38,23 +38,13 @@
       </div>
     </div>
 
-    <div class="flex flex-wrap justify-center lg:justify-start">
-      @if (!(products | async)) {
-
-      <app-loading-product></app-loading-product>
-      <app-loading-product></app-loading-product>
-      <app-loading-product></app-loading-product>
-      <app-loading-product></app-loading-product>
-      <app-loading-product></app-loading-product>
-      <app-loading-product></app-loading-product>
-      <app-loading-product></app-loading-product>
-      <app-loading-product></app-loading-product>
-
-      } @else {
+    <div
+      *ngIf="products | async; else loading"
+      class="flex flex-wrap justify-center lg:justify-start"
+    >
       <div *ngFor="let item of products | async | slice : 0 : 8">
         <app-product-container [product]="item"></app-product-container>
       </div>
-      }
     </div>
   </div>
   <div class="md:hidden lg:flex lg:flex-col space-y-2 lg:space-y-4">
@@ -94,3 +84,16 @@
     </div>
   </div>
 </div>
+
+<ng-template #loading>
+  <div class="flex flex-wrap justify-center lg:justify-start">
+    <app-loading-product></app-loading-product>
+    <app-loading-product></app-loading-product>
+    <app-loading-product></app-loading-product>
+    <app-loading-product></app-loading-product>
+    <app-loading-product></app-loading-product>
+    <app-loading-product></app-loading-product>
+    <app-loading-product></app-loading-product>
+    <app-loading-product></app-loading-product>
+  </div>
+</ng-template>
