--- a/src/app/home/products/products.component.html
+++ b/src/app/home/products/products.component.html
@@ -21,26 +21,29 @@
       </div>
     </div>
 
-    <div class="flex flex-wrap justify-center lg:justify-start">
-      @if (!(products | async)) {
-
-      <app-loading-product></app-loading-product>
-      <app-loading-product></app-loading-product>
-      <app-loading-product></app-loading-product>
-      <app-loading-product></app-loading-product>
-      <app-loading-product></app-loading-product>
-      <app-loading-product></app-loading-product>
-      <app-loading-product></app-loading-product>
-      <app-loading-product></app-loading-product>
-
-      } @else {
+    <div
+      *ngIf="products | async; else loading"
+      class="flex flex-wrap justify-center lg:justify-start"
+    >
       <div *ngFor="let item of products | async | slice : 0 : 8">
         <app-product-container
           [isQuickViewDisabled]="false"
           [product]="item"
         ></app-product-container>
       </div>
-      }
     </div>
   </div>
 </div>
+
+<ng-template #loading>
+  <div class="flex flex-wrap justify-center lg:justify-start">
+    <app-loading-product></app-loading-product>
+    <app-loading-product></app-loading-product>
+    <app-loading-product></app-loading-product>
+    <app-loading-product></app-loading-product>
+    <app-loading-product></app-loading-product>
+    <app-loading-product></app-loading-product>
+    <app-loading-product></app-loading-product>
+    <app-loading-product></app-loading-product>
+  </div>
+</ng-template>
