--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -7,7 +7,12 @@
 </div>
 <div class="bg-[#2484C2] p-6">
   <div class="lg:w-[1200px] flex m-auto items-center justify-between">
-    <img src="./../../assets/logo.svg" class="invert w-24" />
+    <img
+      src="./../../assets/logo.svg"
+      class="invert w-24 cursor-pointer"
+      routerLink="/home"
+      routerLinkActive="active"
+    />
     <!-- SEARCH BAR  -->
     <div class="h-8 p-2 bg-white hidden md:flex">
       <input class="outline-none w-[320px] text-black" />
