need to work on it later

--- a/src/app/checkout/checkout.component.html
+++ b/src/app/checkout/checkout.component.html
@@ -1,8 +1,1 @@
-<div id="checkout"></div>
-
-@if (loading) {
-<div class="h-[100vh] flex justify-center items-center">
-  <mat-progress-spinner mode="indeterminate"> </mat-progress-spinner>
-</div>
-
-}
+<div id="checkout" class="h-[100vh]"></div>
