--- a/src/app/components/best-deal-product/best-deal-product.component.html
+++ b/src/app/components/best-deal-product/best-deal-product.component.html
@@ -20,7 +20,9 @@
             class="invert group-hover/hovericons:invert-0"
           />
         </div>
+
         <div
+          (click)="addToCart(product)"
           class="hover:bg-ciliconorange cursor-pointer group/hovericons bg-white rounded-full w-[40px] h-[40px] p-2 flex justify-center items-center"
         >
           <img
@@ -49,3 +51,4 @@
     </p>
   </div>
 </div>
+<p-toast />
