added the verified icon in the checkout success page

--- a/src/app/return/return.component.html
+++ b/src/app/return/return.component.html
@@ -2,6 +2,7 @@
   <div
     class="flex space-y-4 justify-center items-center flex-col text-center h-full"
   >
+    <i class="pi pi-verified" style="color: #2db224; font-size: 4rem"></i>
     <h1 class="font-bold text-2xl">
       Congratulations {{ session_Status?.customer_name }}
     </h1>
@@ -11,5 +12,6 @@
       You will soon receive an email to your account:
       {{ session_Status?.customer_email }}
     </p>
+    <div></div>
   </div>
 </main>
