store setup for wishlist

--- a/src/app/components/best-deal-product/best-deal-product.component.html
+++ b/src/app/components/best-deal-product/best-deal-product.component.html
@@ -13,6 +13,7 @@
         class="absolute top-1/2 left-1/2 flex -translate-x-1/2 -translate-y-1/2 space-x-2"
       >
         <div
+          (click)="addToWishlist(product)"
           class="hover:bg-ciliconorange cursor-pointer group/hovericons bg-white rounded-full w-[40px] h-[40px] p-2 flex justify-center items-center"
         >
           <img
