--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -33,7 +33,11 @@
         </div>
       </div>
 
-      <img class="w-6" src="./../../assets/icons/love.svg" />
+      <img
+        (click)="gotoWishList()"
+        class="w-6"
+        src="./../../assets/icons/love.svg"
+      />
       <div (click)="userLoginModal()">
         <img class="w-6" src="./../../assets/icons/user.svg" />
       </div>
