--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,1 +1,5 @@
-<p>dashboard works!</p>
+<div class="p-4 md:p-0 md:w-[800px] lg:w-[1200px] m-auto md:my-6">
+  <div>
+    <app-side-panel> </app-side-panel>
+  </div>
+</div>
