working on top content section need to fix the width of the whole router outlet

--- a/src/app/dashboard/components/account-info-card/account-info-card.component.html
+++ b/src/app/dashboard/components/account-info-card/account-info-card.component.html
@@ -1,37 +1,41 @@
-<div class="md:w-[312px] md:h-[312px]">
-  <div class="p-4 h-[52px] border flex items-center">
-    <span class="uppercase font-medium text-sm">Account info</span>
-  </div>
-  <div class="space-y-4 pt-4 border-l border-r border-b p-4">
-    <!-- profile -->
-    <div class="flex space-x-4">
-      <i class="pi pi-circle-fill text-gray-200" style="font-size: 48px"></i>
+<div class="md:w-[312px] md:h-[312px] border">
+  <div class="">
+    <div class="p-4 h-[52px] border-b flex items-center">
+      <span class="uppercase font-medium text-sm">Account info</span>
+    </div>
+    <div class="space-y-4 pt-4 p-4">
+      <!-- profile -->
+      <div class="flex space-x-4">
+        <i class="pi pi-circle-fill text-gray-200" style="font-size: 48px"></i>
 
-      <div class="flex flex-col">
-        <span class="text-base font-semibold">Mingma Tenzing</span>
-        <span class="text-gray-600 text-sm font-normal">Perth, Australia</span>
+        <div class="flex flex-col">
+          <span class="text-base font-semibold">Mingma Tenzing</span>
+          <span class="text-gray-600 text-sm font-normal"
+            >Perth, Australia</span
+          >
+        </div>
       </div>
-    </div>
-    <!-- info email and others -->
-    <div>
-      <div class="space-x-2">
-        <span class="text-sm font-normal text-gray-900">Email:</span>
-        <span class="text-gray-600 text-sm">mingmatenzing&#64;gmail.com</span>
+      <!-- info email and others -->
+      <div>
+        <div class="space-x-2">
+          <span class="text-sm font-normal text-gray-900">Email:</span>
+          <span class="text-gray-600 text-sm">mingmatenzing&#64;gmail.com</span>
+        </div>
+        <div class="space-x-2">
+          <span class="text-sm font-normal text-gray-900">Sec Email:</span>
+          <span class="text-gray-600 text-sm">perth&#64;gmail.com</span>
+        </div>
+        <div class="space-x-2">
+          <span class="text-sm font-normal text-gray-900">Phone:</span>
+          <span class="text-gray-600 text-sm">041234-99-234</span>
+        </div>
       </div>
-      <div class="space-x-2">
-        <span class="text-sm font-normal text-gray-900">Sec Email:</span>
-        <span class="text-gray-600 text-sm">perth&#64;gmail.com</span>
+      <!-- edit account button -->
+      <div class="border p-4 border-blue-100 w-[155px]">
+        <button class="text-[#2DA5F3] uppercase font-semibold">
+          Edit account
+        </button>
       </div>
-      <div class="space-x-2">
-        <span class="text-sm font-normal text-gray-900">Phone:</span>
-        <span class="text-gray-600 text-sm">041234-99-234</span>
-      </div>
-    </div>
-    <!-- edit account button -->
-    <div class="border p-4 border-blue-100 w-[155px]">
-      <button class="text-[#2DA5F3] uppercase font-semibold">
-        Edit account
-      </button>
     </div>
   </div>
 </div>
