payment option section complete

--- a/src/app/dashboard/components/billing-address-card/billing-address-card.component.html
+++ b/src/app/dashboard/components/billing-address-card/billing-address-card.component.html
@@ -4,7 +4,7 @@
   </div>
   <div class="space-y-4 pt-4 p-4">
     <!-- profile -->
-    <div class="f">
+    <div class="">
       <div class="flex flex-col">
         <span class="text-base font-semibold">Mingma Tenzing Sherpa</span>
         <span class="text-gray-600 text-sm font-normal"
