need to work on recommend

--- a/src/app/dashboard/feature/main/main.component.html
+++ b/src/app/dashboard/feature/main/main.component.html
@@ -25,4 +25,9 @@
   <section id=" payment option">
     <app-payment-option></app-payment-option>
   </section>
+
+  <!-- recent order -->
+  <section id="recent order">
+    <app-recent-order></app-recent-order>
+  </section>
 </main>
