changed the nav color

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -5,7 +5,7 @@
     <img class="w-24" src="./../../assets/icons/shop now.svg" />
   </div>
 </div>
-<div class="bg-[#2484C2] p-6">
+<div class="bg-[#1B6392] p-6">
   <div class="lg:w-[1200px] flex m-auto items-center justify-between">
     <img
       src="./../../assets/logo.svg"
