recent order for mobile complete

--- a/src/app/dashboard/components/recent-order/recent-order.component.html
+++ b/src/app/dashboard/components/recent-order/recent-order.component.html
@@ -9,44 +9,80 @@
   </div>
 
   <!-- table -->
-  <table class="table-auto w-full">
-    <thead class="w-full bg-gray-50 text-xs uppercase text-gray-700">
-      <tr class="">
-        <th class="text-start p-4 font-medium">Order id</th>
-        <th class="text-start p-4 font-medium">Status</th>
-        <th class="text-start p-4 font-medium">Date</th>
-        <th class="text-start p-4 font-medium">Total</th>
-        <th class="text-start p-4 font-medium">Action</th>
-      </tr>
-    </thead>
-    <tbody class="">
-      <tr class="text-sm font-medium hover:bg-gray-50">
-        <td class="p-4">#124261</td>
-        <td class="p-4 uppercase text-ciliconorange">In progress</td>
-        <td class="p-4">{{ date }}</td>
-        <td class="p-4">2233</td>
-        <td class="text-[#2DA5F3] flex items-center space-x-2 p-4">
-          <span>View Details</span><i class="pi pi-arrow-right"></i>
-        </td>
-      </tr>
-      <tr class="text-sm font-medium hover:bg-gray-50">
-        <td class="p-4">#124261</td>
-        <td class="p-4 uppercase text-green-500">Completed</td>
-        <td class="p-4">{{ date }}</td>
-        <td class="p-4">2233</td>
-        <td class="text-[#2DA5F3] flex items-center space-x-2 p-4">
-          <span>View Details</span><i class="pi pi-arrow-right"></i>
-        </td>
-      </tr>
-      <tr class="text-sm font-medium hover:bg-gray-50">
-        <td class="p-4">#124261</td>
-        <td class="p-4 uppercase text-red-500">canceled</td>
-        <td class="p-4">{{ date }}</td>
-        <td class="p-4">2233</td>
-        <td class="text-[#2DA5F3] flex items-center space-x-2 p-4">
-          <span>View Details</span><i class="pi pi-arrow-right"></i>
-        </td>
-      </tr>
-    </tbody>
-  </table>
+  <div class="hidden lg:flex">
+    <table class="table-auto w-full">
+      <thead class="w-full bg-gray-50 text-xs uppercase text-gray-700">
+        <tr class="">
+          <th class="text-start p-4 font-medium">Order id</th>
+          <th class="text-start p-4 font-medium">Status</th>
+          <th class="text-start p-4 font-medium">Date</th>
+          <th class="text-start p-4 font-medium">Total</th>
+          <th class="text-start p-4 font-medium">Action</th>
+        </tr>
+      </thead>
+      <tbody class="">
+        <tr class="text-sm font-medium hover:bg-gray-50">
+          <td class="p-4">#124261</td>
+          <td class="p-4 uppercase text-ciliconorange">In progress</td>
+          <td class="p-4">{{ date }}</td>
+          <td class="p-4">2233</td>
+          <td class="text-[#2DA5F3] flex items-center space-x-2 p-4">
+            <span>View Details</span><i class="pi pi-arrow-right"></i>
+          </td>
+        </tr>
+        <tr class="text-sm font-medium hover:bg-gray-50">
+          <td class="p-4">#124261</td>
+          <td class="p-4 uppercase text-green-500">Completed</td>
+          <td class="p-4">{{ date }}</td>
+          <td class="p-4">2233</td>
+          <td class="text-[#2DA5F3] flex items-center space-x-2 p-4">
+            <span>View Details</span><i class="pi pi-arrow-right"></i>
+          </td>
+        </tr>
+        <tr class="text-sm font-medium hover:bg-gray-50">
+          <td class="p-4">#124261</td>
+          <td class="p-4 uppercase text-red-500">canceled</td>
+          <td class="p-4">{{ date }}</td>
+          <td class="p-4">2233</td>
+          <td class="text-[#2DA5F3] flex items-center space-x-2 p-4">
+            <span>View Details</span><i class="pi pi-arrow-right"></i>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+
+  <div class="lg:hidden">
+    <table class="table-auto flex justify-between">
+      <thead class="">
+        <tr class="flex flex-col">
+          <th class="uppercase text-sm font-normal text-gray-600 p-2">
+            Order Id
+          </th>
+          <th class="uppercase text-sm font-normal text-gray-600 p-2">
+            Status
+          </th>
+          <th class="uppercase text-sm font-normal text-gray-600 p-2">date</th>
+          <th class="uppercase text-sm font-normal text-gray-600 p-2">Total</th>
+          <th class="uppercase text-sm font-normal text-gray-600 p-2">
+            Action
+          </th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr class="flex flex-col">
+          <td class="uppercase text-sm p-2">#2343</td>
+          <td class="uppercase text-sm p-2 text-ciliconorange">in progress</td>
+          <td class="p-2 text-sm">
+            {{ date.slice(0, 10) }}
+          </td>
+          <td class="p-2 text-sm">$5000</td>
+          <td class="p-2 text-sm flex space-x-2">
+            <span>View Details</span
+            ><span><i class="pi pi-arrow-right text-sm"></i></span>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
 </div>
