order history complete

--- a/src/app/dashboard/components/side-menu/side-menu.component.html
+++ b/src/app/dashboard/components/side-menu/side-menu.component.html
@@ -1,11 +1,15 @@
 <div class="">
   <div
+    routerLink="main"
+    routerLinkActive="active"
     class="flex items-center cursor-pointer space-x-4 hover:bg-ciliconorange hover:text-white p-2"
   >
     <i class="pi pi-bars"></i>
     <span> Dashboard </span>
   </div>
   <div
+    routerLink="order-history"
+    routerLinkActive="active"
     class="flex items-center cursor-pointer space-x-4 hover:bg-ciliconorange hover:text-white p-2"
   >
     <i class="pi pi-shop"></i>
