added shop link to the top nav

--- a/src/app/header/bottom-nav/bottom-nav.component.html
+++ b/src/app/header/bottom-nav/bottom-nav.component.html
@@ -12,20 +12,28 @@
       alt="arrow down image"
     />
   </div>
-  <div class="flex text-gray-600 space-x-2 items-center">
-    <img src="./../../../assets/icons/map.svg" alt="map icon" />
+  <div
+    routerLink="shop"
+    routerLinkActive="active"
+    class="flex text-gray-600 cursor-pointer space-x-2 items-center"
+  >
+    <i class="pi pi-shop" style="font-size: 20px"></i>
+    <p>Shop</p>
+  </div>
+  <div class="flex text-gray-600 cursor-pointer space-x-2 items-center">
+    <i class="pi pi-map-marker" style="font-size: 20px"></i>
     <p>Track Order</p>
   </div>
-  <div class="flex text-gray-600 space-x-2 items-center">
-    <img src="./../../../assets/icons/compareicon.svg" alt="map icon" />
+  <div class="flex text-gray-600 cursor-pointer space-x-2 items-center">
+    <i class="pi pi-arrow-right-arrow-left" style="font-size: 20px"></i>
     <p>Compare</p>
   </div>
-  <div class="flex text-gray-600 space-x-2 items-center">
-    <img src="./../../../assets/icons/headphone.svg" alt="map icon" />
+  <div class="flex text-gray-600 cursor-pointer space-x-2 items-center">
+    <i class="pi pi-headphones" style="font-size: 20px"></i>
     <p>Customer Support</p>
   </div>
-  <div class="flex text-gray-600 space-x-2 items-center">
-    <img src="./../../../assets/icons/info.svg" alt="map icon" />
+  <div class="flex text-gray-600 cursor-pointer space-x-2 items-center">
+    <i class="pi-info-circle pi" style="font-size: 20px"></i>
     <p>Need Help</p>
   </div>
 
