--- a/src/app/dashboard/components/recent-order/recent-order.component.html
+++ b/src/app/dashboard/components/recent-order/recent-order.component.html
@@ -8,7 +8,7 @@
     </div>
   </div>
 
-  <!-- table -->
+  <!-- desktop table -->
   <div class="hidden lg:flex">
     <table class="table-auto w-full">
       <thead class="w-full bg-gray-50 text-xs uppercase text-gray-700">
@@ -52,6 +52,7 @@
     </table>
   </div>
 
+  <!-- mobile table  -->
   <div class="lg:hidden">
     <table class="table-auto flex justify-between">
       <thead class="">
