--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -5,7 +5,7 @@
     <!-- <app-side-panel> </app-side-panel> -->
 
     <app-side-menu class="w-[200px] hidden lg:flex"></app-side-menu>
-    <div class="lg:w-[984px]">
+    <div class="lg:w-[984px] w-full">
       <router-outlet></router-outlet>
     </div>
   </div>
