--- a/src/app/auth/auth-form/auth-form.component.html
+++ b/src/app/auth/auth-form/auth-form.component.html
@@ -1,1 +1,31 @@
-<p>auth-form works!</p>
+<main class="md:w-[424px] m-auto p-4 md:p-0 my-20">
+  <div class="shadow-lg">
+    <!-- header -->
+    <div class="relative">
+      <div
+        class="flex justify-between border p-4 rounded-t-md text-gray-900 text-lg font-semibold"
+      >
+        <span
+          (click)="toggle()"
+          routerLinkActive="true"
+          routerLink="/auth/signin"
+          class="cursor-pointer"
+          >Sign In</span
+        >
+        <span
+          (click)="toggle()"
+          routerLinkActive="true"
+          routerLink="/auth/signup"
+          class="cursor-pointer"
+          >Sign up</span
+        >
+      </div>
+      <div
+        [@openClose]="left_side_bar ? 'open' : 'closed'"
+        class="w-1/2 border-ciliconorange border-b absolute bottom-0 border-2"
+      ></div>
+    </div>
+    <!-- form -->
+    <router-outlet></router-outlet>
+  </div>
+</main>
