--- a/src/app/auth/feature/signup/signup/signup.component.html
+++ b/src/app/auth/feature/signup/signup/signup.component.html
@@ -20,7 +20,7 @@
   <!-- terms agrrement -->
   <div>
     <p class="text-sm font-normal">
-      Are you agree to Clicon
+      You are agreeing to Clicon
       <span class="text-ciliconPriceBlue">Terms of Condition</span> and
       <span class="text-ciliconPriceBlue">Privacy Policy.</span>
     </p>
@@ -29,7 +29,7 @@
     <button
       class="flex space-x-2 items-center p-2 bg-ciliconorange text-white w-full justify-center font-medium"
     >
-      <span class="uppercase">Sign in</span> <i class="pi pi-arrow-right"></i>
+      <span class="uppercase">Sign up</span> <i class="pi pi-arrow-right"></i>
     </button>
   </div>
   <!-- or line -->
@@ -43,12 +43,12 @@
     class="w-full p-2 border cursor-pointer text-sm text-gray-700 flex items- font-normal justify-center space-x-4"
   >
     <i class="pi pi-google"></i>
-    <span>Login with Google</span>
+    <span>Sign up with Google</span>
   </div>
   <div
     class="w-full p-2 border cursor-pointer text-sm text-gray-700 flex font-normal items-center justify-center space-x-4"
   >
     <i class="pi pi-apple"></i>
-    <span>Login with Apple</span>
+    <span>Sign up with Apple</span>
   </div>
 </div>
