--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -38,7 +38,7 @@
         class="w-6"
         src="./../../assets/icons/love.svg"
       />
-      <div (click)="userLoginModal()">
+      <div (click)="goToDashboard()">
         <img class="w-6" src="./../../assets/icons/user.svg" />
       </div>
       <button type="button">
