added profile image link

--- a/src/app/home/latest-news/latest-news.component.html
+++ b/src/app/home/latest-news/latest-news.component.html
@@ -10,7 +10,7 @@
       <div class="flex space-x-3 items-center">
         <div class="flex space-x-1 items-center">
           <img src="../../../assets/icons/user-icon.svg" />
-          <p class="text-xs text-gray-700">Gracie</p>
+          <p class="text-xs text-gray-700">Ming</p>
         </div>
         <div class="flex space-x-1 items-center">
           <img src="../../../assets/icons/calender.svg" />
@@ -35,7 +35,7 @@
       <div class="flex space-x-3 items-center">
         <div class="flex space-x-1 items-center">
           <img src="../../../assets/icons/user-icon.svg" class="w-6" />
-          <p class="text-xs text-gray-700">Gracie</p>
+          <p class="text-xs text-gray-700">Ming</p>
         </div>
         <div class="flex space-x-1 items-center">
           <img src="../../../assets/icons/calender.svg" class="w-6" />
@@ -60,7 +60,7 @@
       <div class="flex space-x-3 items-center">
         <div class="flex space-x-1 items-center">
           <img src="../../../assets/icons/user-icon.svg" />
-          <p class="text-xs text-gray-700">Gracie</p>
+          <p class="text-xs text-gray-700">Ming</p>
         </div>
         <div class="flex space-x-1 items-center">
           <img src="../../../assets/icons/calender.svg" />
