--- a/src/app/auth/feature/signup/signup/signup.component.html
+++ b/src/app/auth/feature/signup/signup/signup.component.html
@@ -10,7 +10,7 @@
       required
       formControlName="user_name"
       type="text"
-      class="outline-none text-gray-500 p-2"
+      class="outline-none border text-gray-500 p-2"
     />
   </div>
 
@@ -21,6 +21,17 @@
       required
       formControlName="email"
       type="email"
+      class="outline-none border text-gray-500 p-2"
+    />
+  </div>
+
+  <!-- profile image -->
+  <div class="flex flex-col space-y-2 text-sm font-medium">
+    <label class="text-gray-900">Profile Image Link</label>
+    <input
+      required
+      formControlName="email"
+      type="url"
       class="outline-none border text-gray-500 p-2"
     />
   </div>
