profile image feild is now working on signup

--- a/src/app/auth/feature/signup/signup/signup.component.html
+++ b/src/app/auth/feature/signup/signup/signup.component.html
@@ -30,8 +30,8 @@
     <label class="text-gray-900">Profile Image Link</label>
     <input
       required
-      formControlName="email"
-      type="url"
+      formControlName="profile_image"
+      type="text"
       class="outline-none border text-gray-500 p-2"
     />
   </div>
