--- a/src/app/auth/feature/signup/signup/signup.component.html
+++ b/src/app/auth/feature/signup/signup/signup.component.html
@@ -31,7 +31,7 @@
     <input
       required
       formControlName="profile_image"
-      type="text"
+      type="url"
       class="outline-none border text-gray-500 p-2"
     />
   </div>
