--- a/src/app/dashboard/components/side-menu/side-menu.component.html
+++ b/src/app/dashboard/components/side-menu/side-menu.component.html
@@ -22,6 +22,8 @@
     <span> Track Order </span>
   </div>
   <div
+    routerLink="cart"
+    routerLinkActive="active"
     class="flex items-center cursor-pointer space-x-4 hover:bg-ciliconorange hover:text-white p-2"
   >
     <i class="pi pi-shopping-cart"></i>
