added active class to the side menu components

--- a/src/app/dashboard/components/side-menu/side-menu.component.html
+++ b/src/app/dashboard/components/side-menu/side-menu.component.html
@@ -30,6 +30,8 @@
     <span> Shopping Cart </span>
   </div>
   <div
+    routerLink="wishlist"
+    routerLinkActive="active"
     class="flex items-center cursor-pointer space-x-4 hover:bg-ciliconorange hover:text-white p-2"
   >
     <i class="pi pi-heart"></i>
