--- a/src/app/dashboard/components/account-info-card/account-info-card.component.html
+++ b/src/app/dashboard/components/account-info-card/account-info-card.component.html
@@ -6,10 +6,14 @@
     <div class="space-y-4 pt-4 p-4">
       <!-- profile -->
       <div class="flex space-x-4">
+        <img
+          src="{{ user.profile_image }}"
+          class="w-[48px] h-[48px] rounded-full"
+        />
         <i class="pi pi-circle-fill text-gray-200" style="font-size: 48px"></i>
 
         <div class="flex flex-col">
-          <span class="text-base font-semibold">Mingma Tenzing</span>
+          <span class="text-base font-semibold">{{ user.user_name }}</span>
           <span class="text-gray-600 text-sm font-normal"
             >Perth, Australia</span
           >
@@ -19,11 +23,11 @@
       <div>
         <div class="space-x-2">
           <span class="text-sm font-normal text-gray-900">Email:</span>
-          <span class="text-gray-600 text-sm">mingmatenzing&#64;gmail.com</span>
+          <span class="text-gray-600 text-sm">{{ user.email }}</span>
         </div>
         <div class="space-x-2">
           <span class="text-sm font-normal text-gray-900">Sec Email:</span>
-          <span class="text-gray-600 text-sm">perth&#64;gmail.com</span>
+          <span class="text-gray-600 text-sm">{{ user.email }}</span>
         </div>
         <div class="space-x-2">
           <span class="text-sm font-normal text-gray-900">Phone:</span>
