--- a/src/app/dashboard/feature/main/main.component.html
+++ b/src/app/dashboard/feature/main/main.component.html
@@ -1,7 +1,9 @@
-<main class="space-y-4">
+<main *ngIf="user$ | async; let current_user" class="space-y-4">
   <!-- heading -->
   <section id="heading" class="space-y-2">
-    <h3 class="text-gray-900 text-2xl font-semibold">Hello, Kevin</h3>
+    <h3 class="text-gray-900 text-2xl font-semibold">
+      Hello, {{ current_user.user_name }}
+    </h3>
     <p class="text-gray-700 text-sm">
       From your account dashboard. you can easily check & view your Recent
       Orders, manage your Shipping and Billing Addresses and edit your Password
@@ -16,8 +18,8 @@
     id="top content"
     class="md:flex-row md:flex-wrap flex flex-col space-y-4 md:space-y-0 md:gap-6 lg:justify-between lg:gap-0"
   >
-    <app-account-info-card></app-account-info-card>
-    <app-billing-address-card></app-billing-address-card>
+    <app-account-info-card [user]="current_user"></app-account-info-card>
+    <app-billing-address-card [user]="current_user"></app-billing-address-card>
     <app-fun-fact-cards></app-fun-fact-cards>
   </section>
 
