added the dynamic user details on the payment options and changed sec email in account info to joined since - need to work on user orders now

--- a/src/app/dashboard/components/payment-option/payment-option.component.html
+++ b/src/app/dashboard/components/payment-option/payment-option.component.html
@@ -34,7 +34,7 @@
       <!-- apple pay -->
       <div class="text-white flex justify-between items-center">
         <i class="pi pi-apple" style="font-size: 30px"></i>
-        <span class="text-sm font-medium"> Mingma Tenzing Sherpa</span>
+        <span class="text-sm font-medium"> {{ user.user_name }}</span>
       </div>
     </div>
     <div
@@ -63,7 +63,7 @@
       <!-- apple pay -->
       <div class="text-white flex justify-between items-center">
         <i class="pi pi-paypal" style="font-size: 30px"></i>
-        <span class="text-sm font-medium"> Mingma Tenzing Sherpa</span>
+        <span class="text-sm font-medium"> {{ user.user_name }}</span>
       </div>
     </div>
   </div>
