--- a/src/app/dashboard/feature/main/main.component.html
+++ b/src/app/dashboard/feature/main/main.component.html
@@ -25,7 +25,7 @@
 
   <!-- payment option -->
   <section id=" payment option">
-    <app-payment-option></app-payment-option>
+    <app-payment-option [user]="current_user"></app-payment-option>
   </section>
 
   <!-- recent order -->
