--- a/src/app/dashboard/components/account-info-card/account-info-card.component.html
+++ b/src/app/dashboard/components/account-info-card/account-info-card.component.html
@@ -8,9 +8,8 @@
       <div class="flex space-x-4">
         <img
           src="{{ user.profile_image }}"
-          class="w-[48px] h-[48px] rounded-full"
+          class="w-[48px] h-[48px] rounded-full object-cover"
         />
-        <i class="pi pi-circle-fill text-gray-200" style="font-size: 48px"></i>
 
         <div class="flex flex-col">
           <span class="text-base font-semibold">{{ user.user_name }}</span>
@@ -26,8 +25,10 @@
           <span class="text-gray-600 text-sm">{{ user.email }}</span>
         </div>
         <div class="space-x-2">
-          <span class="text-sm font-normal text-gray-900">Sec Email:</span>
-          <span class="text-gray-600 text-sm">{{ user.email }}</span>
+          <span class="text-sm font-normal text-gray-900">Joined Since:</span>
+          <span class="text-gray-600 text-sm">{{
+            user.date | date : "dd/MM/yyyy"
+          }}</span>
         </div>
         <div class="space-x-2">
           <span class="text-sm font-normal text-gray-900">Phone:</span>
