--- a/src/app/dashboard/components/billing-address-card/billing-address-card.component.html
+++ b/src/app/dashboard/components/billing-address-card/billing-address-card.component.html
@@ -6,7 +6,7 @@
     <!-- profile -->
     <div class="">
       <div class="flex flex-col">
-        <span class="text-base font-semibold">Mingma Tenzing Sherpa</span>
+        <span class="text-base font-semibold">{{ user.user_name }}</span>
         <span class="text-gray-600 text-sm font-normal"
           >Perth, Western Australia, Australia</span
         >
@@ -20,7 +20,7 @@
       </div>
       <div class="space-x-2">
         <span class="text-sm font-normal text-gray-900">Email:</span>
-        <span class="text-gray-600 text-sm">mingmatenzing&#64;gmail.com</span>
+        <span class="text-gray-600 text-sm">{{ user.email }}</span>
       </div>
     </div>
     <!-- edit account button -->
