added the logout feature

--- a/src/app/dashboard/components/side-menu/side-menu.component.html
+++ b/src/app/dashboard/components/side-menu/side-menu.component.html
@@ -50,6 +50,7 @@
     <span> Setting </span>
   </div>
   <div
+    (click)="logOut()"
     class="flex items-center cursor-pointer space-x-4 hover:bg-ciliconorange hover:text-white p-2"
   >
     <i class="pi pi-sign-out"></i>
